    accept a "charset" flag, to support Firebird
    "CHARACTER SET" clause.  [ticket:1813]
  
- declarative
   - a mixin class can now define a column that matches
     one which is present on a __table__ defined on a 
     subclass.  It cannot, however, define one that is 
     not present in the __table__, and the error message
     here now works.  [ticket:1821]
     
- documentation
  - Added documentation for the Inspector. [ticket:1820]

  - Fixed @memoized_property and @memoized_instancemethod
    decorators so that Sphinx documentation picks up 
    these attributes and methods, such as 
    ResultProxy.inserted_primary_key. [ticket:1830]
    
    
0.6.1
=====
- orm
  - Fixed regression introduced in 0.6.0 involving improper
    history accounting on mutable attributes.  [ticket:1782]
  
  - Fixed regression introduced in 0.6.0 unit of work refactor
    that broke updates for bi-directional relationship()
    with post_update=True. [ticket:1807]
    
  - session.merge() will not expire attributes on the returned
    instance if that instance is "pending".  [ticket:1789]

  - fixed __setstate__ method of CollectionAdapter to not
    fail during deserialize where parent InstanceState not
    yet unserialized.  [ticket:1802]

  - Added internal warning in case an instance without a 
    full PK happened to be expired and then was asked
    to refresh. [ticket:1797]

  - Added more aggressive caching to the mapper's usage of
    UPDATE, INSERT, and DELETE expressions.  Assuming the 
    statement has no per-object SQL expressions attached,
    the expression objects are cached by the mapper after 
    the first create, and their compiled form is stored
    persistently in a cache dictionary for the duration of
    the related Engine.  The cache is an LRUCache for the
    rare case that a mapper receives an extremely
    high number of different column patterns as UPDATEs.
    
- sql
  - expr.in_() now accepts a text() construct as the argument.